layout displays correcty on mobile and desktop

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,16 +57,18 @@
 .bookshelf {
   display: flex;
   flex-wrap: wrap;
-  flex: 1;
   justify-content: center;
-  padding: 10px;
-  margin: 0 auto;
+  padding: 15px;
+  @media screen and (min-width: 600px) {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 5px;
+  }
 }
 
 .book {
   text-align: center;
-  padding: 2px;
-  margin: 0.7em;
+  margin: 0.7em 0;
   background-color: #fbfcfd;
   border-radius: 7px;
   &:hover {
